package rsbtimesync;

import "rsb/protocol/Notification.proto";

message SyncMap {

	message ScopeSet {
		required bytes scope = 1;
		repeated .rsb.protocol.Notification notifications = 2;
	}
	
	repeated ScopeSet sets = 1;

}
